// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdvancedDetailsBottomSheet renders correctly 1`] = `
<ExpandableSection
  collapsedContent={
    <InfoSection>
      <InfoRow
        isCompact={true}
        label="Advanced details"
      />
    </InfoSection>
  }
  expandedContent={
    <React.Fragment>
      <InfoSection>
        <InfoRow
          label="Interacting with"
        >
          <mockConstructor
            type="EthereumAddress"
            value="0x987654321"
            variation="1"
          />
        </InfoRow>
      </InfoSection>
      <InfoSection>
        <InfoRow
          label="Nonce"
          tooltip="This is the transaction number of an account. Nonce for the first transaction is 0 and it increases in sequential order."
        >
          <UNDEFINED
            color="primary"
            onPress={[Function]}
            style={
              {
                "textDecorationLine": "underline",
              }
            }
            variant="bodyMD"
          >
            42
          </UNDEFINED>
        </InfoRow>
      </InfoSection>
      <InfoSection>
        <InfoRow
          copyText="0x0123456789abcdef"
          label="Data"
          valueOnNewLine={true}
        >
          0x0123456789abcdef
        </InfoRow>
      </InfoSection>
    </React.Fragment>
  }
  expandedContentTitle="Advanced details"
  isCompact={true}
  testID="account-network-section"
/>
`;

exports[`AdvancedDetailsBottomSheet should render with nonce modal when showNonceModal is true 1`] = `
<ExpandableSection
  collapsedContent={
    <InfoSection>
      <InfoRow
        isCompact={true}
        label="Advanced details"
      />
    </InfoSection>
  }
  expandedContent={
    <React.Fragment>
      <InfoSection>
        <InfoRow
          label="Interacting with"
        >
          <mockConstructor
            type="EthereumAddress"
            value="0x987654321"
            variation="1"
          />
        </InfoRow>
      </InfoSection>
      <InfoSection>
        <InfoRow
          label="Nonce"
          tooltip="This is the transaction number of an account. Nonce for the first transaction is 0 and it increases in sequential order."
        >
          <UNDEFINED
            color="primary"
            onPress={[Function]}
            style={
              {
                "textDecorationLine": "underline",
              }
            }
            variant="bodyMD"
          >
            42
          </UNDEFINED>
        </InfoRow>
      </InfoSection>
      <InfoSection>
        <InfoRow
          copyText="0x0123456789abcdef"
          label="Data"
          valueOnNewLine={true}
        >
          0x0123456789abcdef
        </InfoRow>
      </InfoSection>
      <CustomNonceModal
        close={[Function]}
        nonceValue={42}
        proposedNonce={42}
        save={[Function]}
      />
    </React.Fragment>
  }
  expandedContentTitle="Advanced details"
  isCompact={true}
  testID="account-network-section"
/>
`;
